--- a/D_Project_1/b_Course_Project_Initialize/src/index.html
+++ b/D_Project_1/b_Course_Project_Initialize/src/index.html
@@ -4,14 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
-    <link rel="stylesheet" href="./assets/css/font-awesome.min.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
     <title>Online Academy</title>
   </head>
   <body>
@@ -55,7 +47,7 @@
               <a href="#" class="nav-link px-2 link-secondary">Home</a>
             </li>
             <li>
-              <a href="pages/courses.html" class="nav-link px-2 link-dark"
+              <a href="./courses.html" class="nav-link px-2 link-dark"
                 >Courses</a
               >
             </li>
@@ -127,7 +119,7 @@
             </div>
           </div>
           <div class="col">
-            <img src="./assets/banner-image.png" alt="banner-img" />
+            <img src="./assets/images/banner-image.png" alt="banner-img" />
           </div>
         </div>
       </div>
@@ -261,20 +253,4 @@
       </div>
     </div>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"
-  ></script>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
-  <script src="libs/toast/toastr.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-
-  <script src="./index.js"></script>
 </html>
